[gd_scene load_steps=13 format=3]

[ext_resource type="PackedScene" path="res://Scenes/MatchScene/MatchUI/TeamSelectionUI.tscn" id="1"]
[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/PreMatchUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bohxkkb71fd34" path="res://Textures/headIcon.jpg" id="3"]
[ext_resource type="Texture2D" uid="uid://b11tiqqynj7p6" path="res://Textures/net-graphic.png" id="4"]
[ext_resource type="Texture2D" uid="uid://browddj6fobwl" path="res://Textures/143640-allan-border-s-cricket-dos-screenshot-coin-toss.png" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/MatchScene/MatchUI/NameCard.tscn" id="7"]
[ext_resource type="Theme" path="res://Scenes/MatchScene/gridTheme.tres" id="8"]
[ext_resource type="FontFile" path="res://Fonts/a font.tres" id="9"]
[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/TeamLineUpsUI.gd" id="10"]
[ext_resource type="FontFile" path="res://Fonts/teamNameFont.tres" id="11"]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 0.678431, 0, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.756863, 1, 0, 1 )

[node name="PreMatchUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColourRectIntro" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.803922 )

[node name="Label" type="Label" parent="ColourRectIntro"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -111.5
offset_bottom = -44.5
custom_fonts/font = ExtResource( 9 )
text = "Australia vs. France"
align = 1

[node name="Label2" type="Label" parent="ColourRectIntro"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -34.5
offset_bottom = 34.5
custom_fonts/font = ExtResource( 11 )
text = "Friday 11/11/2022
Sydney Olympic Park, Australia"
align = 1

[node name="Button" type="Button" parent="ColourRectIntro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = 227.5
offset_right = 328.5
offset_bottom = 380.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Continue          "
icon = ExtResource( 3 )
expand_icon = true

[node name="Toss" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.92549, 0.811765, 0.364706, 1 )

[node name="ChooseHeads" type="Button" parent="Toss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -244.5
offset_right = 864.5
offset_bottom = -91.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose Heads"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseTails" type="Button" parent="Toss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose Tails"
icon = ExtResource( 3 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Toss"]
offset_left = 406.25
offset_top = 315.378
offset_right = 1046.25
offset_bottom = 715.378
texture = ExtResource( 5 )

[node name="WonToss" type="ColorRect" parent="Toss"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.74902, 0.92549, 0.364706, 1 )

[node name="ChooseServeReceive" type="Button" parent="Toss/WonToss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -244.5
offset_right = 864.5
offset_bottom = -91.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose Serve/Receive"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseSide" type="Button" parent="Toss/WonToss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose Side of Court"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseServe" type="Button" parent="Toss/WonToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -236.5
offset_right = 864.5
offset_bottom = -83.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose To Serve"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseReceive" type="Button" parent="Toss/WonToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose To Receive"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseCurrentSide" type="Button" parent="Toss/WonToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -236.5
offset_right = 864.5
offset_bottom = -83.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Stay On This Side"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseOtherSide" type="Button" parent="Toss/WonToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose Other Side"
icon = ExtResource( 3 )
expand_icon = true

[node name="InfoText" type="Label" parent="Toss/WonToss"]
offset_left = 245.852
offset_top = 522.067
offset_right = 914.852
offset_bottom = 721.067
custom_fonts/font = ExtResource( 11 )
text = "Won Toss"

[node name="CoinResultText" type="Label" parent="Toss/WonToss"]
offset_left = 201.307
offset_top = 78.3992
offset_right = 1164.31
offset_bottom = 277.399
custom_fonts/font = ExtResource( 11 )
text = "Coin is UNDEFINED!"

[node name="LostToss" type="ColorRect" parent="Toss"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.52549, 0.0980392, 1 )

[node name="ChooseCurrentSide" type="Button" parent="Toss/LostToss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -244.5
offset_right = 864.5
offset_bottom = -91.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose This Side"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseOtherSide" type="Button" parent="Toss/LostToss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose The Other Side"
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseServe" type="Button" parent="Toss/LostToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.5
offset_top = -244.5
offset_right = 864.5
offset_bottom = -91.5
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose To Serve "
icon = ExtResource( 3 )
expand_icon = true

[node name="ChooseReceive" type="Button" parent="Toss/LostToss"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.385
offset_top = 24.375
offset_right = 868.385
offset_bottom = 177.375
focus_mode = 0
custom_colors/font_color = Color( 0.972549, 0.815686, 0.486275, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 13 )
focus_mode = 0
text = "Choose To Receive"
icon = ExtResource( 3 )
expand_icon = true

[node name="InfoText" type="Label" parent="Toss/LostToss"]
offset_left = 274.36
offset_top = 507.812
offset_right = 943.361
offset_bottom = 706.812
custom_fonts/font = ExtResource( 11 )
text = "Lost Toss"

[node name="CoinResultText" type="Label" parent="Toss/LostToss"]
offset_left = 124.689
offset_top = 276.179
offset_right = 1087.69
offset_bottom = 475.179
custom_fonts/font = ExtResource( 11 )
text = "Coin is Heads!"

[node name="OppositionChoiceText" type="Label" parent="Toss/LostToss"]
offset_left = 56.981
offset_top = 759.046
offset_right = 1839.98
offset_bottom = 958.046
custom_fonts/font = ExtResource( 11 )
text = "Other team chose to Serve"

[node name="TeamSelectionUI" parent="." instance=ExtResource( 1 )]
visible = false

[node name="TeamLineUpsUI" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.972549, 0.976471, 0.576471, 1 )
script = ExtResource( 10 )

[node name="OppositionTeam" type="GridContainer" parent="TeamLineUpsUI"]
offset_left = 1316.0
offset_top = 119.0
offset_right = 1856.0
offset_bottom = 819.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
columns = 2

[node name="NameCard1" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_bottom = 100.0

[node name="NameCard2" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_right = 540.0
offset_bottom = 100.0

[node name="NameCard3" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_top = 120.0
offset_bottom = 220.0

[node name="NameCard4" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 120.0
offset_right = 540.0
offset_bottom = 220.0

[node name="NameCard5" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_top = 240.0
offset_bottom = 340.0

[node name="NameCard6" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 240.0
offset_right = 540.0
offset_bottom = 340.0

[node name="NameCard7" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_top = 360.0
offset_bottom = 460.0

[node name="NameCard8" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 360.0
offset_right = 540.0
offset_bottom = 460.0

[node name="NameCard9" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_top = 480.0
offset_bottom = 580.0

[node name="NameCard10" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 480.0
offset_right = 540.0
offset_bottom = 580.0

[node name="NameCard11" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_top = 600.0
offset_bottom = 700.0

[node name="NameCard12" parent="TeamLineUpsUI/OppositionTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 600.0
offset_right = 540.0
offset_bottom = 700.0

[node name="HumanTeam" type="GridContainer" parent="TeamLineUpsUI"]
offset_left = 76.0
offset_top = 133.0
offset_right = 616.0
offset_bottom = 833.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
columns = 2

[node name="NameCard1" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_bottom = 100.0

[node name="NameCard2" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_right = 540.0
offset_bottom = 100.0

[node name="NameCard3" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_top = 120.0
offset_bottom = 220.0

[node name="NameCard4" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 120.0
offset_right = 540.0
offset_bottom = 220.0

[node name="NameCard5" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_top = 240.0
offset_bottom = 340.0

[node name="NameCard6" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 240.0
offset_right = 540.0
offset_bottom = 340.0

[node name="NameCard7" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_top = 360.0
offset_bottom = 460.0

[node name="NameCard8" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 360.0
offset_right = 540.0
offset_bottom = 460.0

[node name="NameCard9" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_top = 480.0
offset_bottom = 580.0

[node name="NameCard10" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 480.0
offset_right = 540.0
offset_bottom = 580.0

[node name="NameCard11" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_top = 600.0
offset_bottom = 700.0

[node name="NameCard12" parent="TeamLineUpsUI/HumanTeam" instance=ExtResource( 7 )]
offset_left = 290.0
offset_top = 600.0
offset_right = 540.0
offset_bottom = 700.0

[node name="TeamAName" type="Label" parent="TeamLineUpsUI"]
modulate = Color( 0, 0.0166669, 1, 1 )
offset_top = 21.0
offset_right = 960.0
offset_bottom = 88.0
custom_fonts/font = ExtResource( 11 )
text = "Australia"
align = 1

[node name="TeamBName" type="Label" parent="TeamLineUpsUI"]
modulate = Color( 0, 0.0166669, 1, 1 )
offset_left = 960.0
offset_top = 13.0
offset_right = 1920.0
offset_bottom = 80.0
custom_fonts/font = ExtResource( 11 )
text = "France"
align = 1

[node name="Button" type="Button" parent="TeamLineUpsUI"]
offset_left = 1395.0
offset_top = 943.0
offset_right = 1920.0
offset_bottom = 1080.0
custom_colors/font_color = Color( 0.290196, 0, 1, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 17 )
text = "Continue"
icon = ExtResource( 4 )
expand_icon = true

[connection signal="pressed" from="ColourRectIntro/Button" to="." method="_on_Intro_Button_pressed"]
[connection signal="pressed" from="Toss/ChooseHeads" to="." method="_on_ChooseHeads_pressed"]
[connection signal="pressed" from="Toss/ChooseTails" to="." method="_on_ChooseTails_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseServeReceive" to="." method="_on_ChooseServeReceive_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseSide" to="." method="_on_ChooseSide_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseServe" to="." method="_on_ChooseServe_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseReceive" to="." method="_on_ChooseReceive_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseCurrentSide" to="." method="_on_ChooseCurrentSide_pressed"]
[connection signal="pressed" from="Toss/WonToss/ChooseOtherSide" to="." method="_on_ChooseOtherSide_pressed"]
[connection signal="pressed" from="Toss/LostToss/ChooseCurrentSide" to="." method="_on_ChooseCurrentSide_pressed"]
[connection signal="pressed" from="Toss/LostToss/ChooseOtherSide" to="." method="_on_ChooseOtherSide_pressed"]
[connection signal="pressed" from="Toss/LostToss/ChooseServe" to="." method="_on_ChooseServe_pressed"]
[connection signal="pressed" from="Toss/LostToss/ChooseReceive" to="." method="_on_ChooseReceive_pressed"]
[connection signal="pressed" from="TeamLineUpsUI/Button" to="." method="_Lineup_Button_pressed"]
